# anaconda-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  EULA.txt  LICENSE-conda-mcp-lite.txt  LICENSE.txt  Makefile  README.md  environment-dev.yml  environment.yml  pkgs.txt  pyproject.toml  pytest.ini  server.json
.cursor/: mcp http.json  mcp stdio.json  mcp.json
.github/: CODEOWNERS
.github/scripts/: test_cli.sh  test_integration.sh  test_streamable_http.sh  verify_cli_config.sh  verify_path_detection.sh  verify_streamable_http.sh  verify_uninstall.sh
.github/workflows/: docker.yml  publish-mcp-registry.yml  qa-mcp-scheduled.yml  qa-mcp-test-execution.yml  qa-mcp-tools.yml  release-download-snapshots.yml  release.yml  sbom.yml  test-claude-desktop.yml  unit-tests.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
conda-build/: meta.yaml  post-link.bat  post-link.sh
conda-build/scripts/: post-link.bat  post-link.sh
conda-env-manager-agent/: .gitignore  LICENSE  README.md
conda-env-manager-agent/agent-config/: environment-mapping.md  prompt.md
conda-env-manager-agent/docs/: AGENT_DESIGN.md  EXAMPLES.md
conda-env-manager-agent/scripts/: setup.sh  test-agent.sh
docs/: ADDING_NEW_SERVERS.md  ARCHITECTURE.md  CLAUDE_DESKTOP.md  CLI_USER_GUIDE.md  CODE_ORGANIZATION.md  CONFIGURATION_GUIDE.md  DEVELOPMENT.md  DOCKER.md  PYTHON_EXECUTABLE_CONFIG.md  SERVER_CONFIGURATION.md  SHUTDOWN.md  USER_GUIDE.md  github-release-download-snapshots.md
examples/remote_auth_proxy/: README.md  echo_auth_server.py  mcp_compose.toml
mcpb/: .mcpbignore  Makefile  README.md  ana-assets.sha256  manifest.json  pyproject.toml
mcpb/scripts/: fetch-ana-assets.sh  set-version.mjs  verify-runtime-version.mjs  write-server-json.mjs
mcpb/src/: run.sh  server.js  server.py
reports/: report.html
scripts/: dev_workflow.py
specs/001-extend-qa-tool-coverage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-extend-qa-tool-coverage/checklists/: requirements.md
specs/001-extend-qa-tool-coverage/contracts/: auth-service.md  response-validators.md
specs/002-auth-behavior-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auth-behavior-testing/checklists/: requirements.md
specs/AIC-3389_hide_compose_discover/: plan.md  research.md  spec.md  tasks.md
specs/AIC-3389_hide_compose_discover/checklists/: requirements.md
src/anaconda_mcp/: __init__.py  __main__.py  _shutdown.py  app.py  auth.py  auth_server.py  claude_desktop.py  cli.py  client_config.py  composition.py  config.py  consts.py  eula.py  mcp_compose.toml  mcp_compose.toml.template  mcp_state.py  telemetry.py  terms.py  tool_hooks.py  utils.py  wizard.py
src/anaconda_mcp/conda_mcp_lite/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_app.py  test_auth.py  test_auth_server.py  test_claude_desktop.py  test_cli_help.py  test_composition.py  test_config.py  test_dev_workflow.py  test_install_state.py  test_mcp_state.py  test_otel_logger.py  test_platform_middleware.py  test_serve_sigterm.py  test_setup.py  test_shutdown.py  test_telemetry.py  test_terms.py  test_tool_call_telemetry.py  test_utils.py  test_wizard.py
tests/conda_mcp_lite/: test_arg_safety.py  test_conda_discovery.py  test_find_conda.py  test_lazy_discovery.py  test_mutating_tools.py  test_read_tools.py  test_registry_discovery.py  test_runtime_hygiene.py
tests/qa/: environment.yml
tests/qa/_ai_docs/: AUTH_SETUP.md  BUG_REPORT_DESK_1401.md  CONFIGURATION.md  CONFIG_TESTING_GUIDE.md  COVERAGE_MAP.md  E2E_COVERAGE_MAP.md  E2E_USER_FLOWS.md  FEATURE_TREE.md  INDEX.md  INSTALL_OPTIONS.md  KI-011-HTTP-PROXY-HANG.md  KNOWN_ISSUES.md  LOCAL-DEV-SETUP.md  LOCAL_DEV_SETUP.md  OPEN_QUESTIONS.md  PI-003-investigation.md  PRODUCT_OVERVIEW.md  QA_WALKTHROUGH.md  QUICK_START.md  TESTING_WORKFLOW.md  TESTS_API_TOOLS.md  TESTS_CLI.md  TESTS_CONFIG.md  TESTS_E2E.md  TESTS_E2E_CLAUDE.md  TESTS_E2E_RC2.md  TEST_COVERAGE_ANALYSIS.md  TEST_DESIGN.md  TEST_MATRIX.md  TEST_MATRIX_rc2.md  TEST_PROGRESS.md  WINDOWS_CLAUDE_CODE.md  WINDOWS_SETUP.md
tests/qa/_ai_docs/_planning/: TESTING_WORKFLOW.md  TEST_DESIGN.md  TEST_MATRIX.md  TEST_MATRIX_rc2.md  TEST_MATRIX_rc2_iter2.md
tests/qa/_ai_docs/_product/: COVERAGE_MAP.md  FEATURE_TREE.md  PRODUCT_OVERVIEW.md
tests/qa/_ai_docs/_tracking/: DESK-1409-investigation-comment.md  DOCS_FEEDBACK_PR898.md  KNOWN_ISSUES.md  SUMMARY_rc2_iter2.md  TEST_PROGRESS.md  TEST_PROGRESS_rc1.md  TEST_PROGRESS_rc2_iter1.md  (+1 more)
tests/qa/api_tools/: README.md  conftest.py  environment.yml  pytest.ini  test_guard_install_nonexistent_pkg.py  test_guard_proxy_error_hang.py
tests/qa/http_tools/: .gitignore  README.md  conftest.py  environment.yml  pytest.ini  test_create_environment_root_path.py  test_env_name_resolution.py  test_guard_happy_path_hang.py  test_guard_install_nonexistent_pkg.py  test_guard_proxy_error_hang.py  test_install_existing_package.py
tests/qa/mcp_tools/: README.md  conftest.py  pytest.ini  test_conda_meta_cache.py  test_conda_meta_cli_help.py  test_conda_meta_file_path.py  test_conda_meta_import_mapping.py  test_conda_meta_info.py  test_conda_meta_package_insights.py  test_conda_meta_package_search.py  test_conda_meta_pypi_to_conda.py  test_conda_meta_repoquery.py  test_create_environment_error.py  test_create_environment_root_path.py  test_env_name_resolution.py  test_guard_happy_path_hang.py  test_guard_install_nonexistent_pkg.py  test_guard_proxy_error_hang.py  test_install_existing_package.py  test_list_environment_packages.py  test_remove_environment_happy.py  test_remove_packages.py  test_search_collections_files.py  test_search_documentation.py  test_search_environments.py  test_search_forum.py  test_search_packages.py
tests/qa/shared/: __init__.py  mcp_compose_profiles.py
tests/qa/stdio_tools/: README.md  conftest.py  environment.yml  pytest.ini  test_guard_happy_path_hang_stdio.py  test_guard_proxy_error_hang_stdio.py
(+136 files in other folders)
