[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "anaconda-mcp"
dynamic = ["version"]
description = "Anaconda MCP"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.14"
authors = [{ name = "Anaconda, Inc." }]

dependencies = [
    "mcp-compose>=0.1.11,<2.0.0",
    "anaconda-auth>=0.8.6,<0.10.0",
    "click>=8.2.0,<9.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
anaconda-mcp = "anaconda_mcp.cli:main"

[tool.hatch.build]
exclude = ["tests/**", ".github/**", "Makefile"]
artifacts = [
    "src/anaconda_mcp/mcp_compose.toml",
    "src/anaconda_mcp/mcp_compose.toml.template"
]

[tool.hatch.build.targets.wheel]
packages = ["src/anaconda_mcp"]
force-include = {"src/anaconda_mcp/mcp_compose.toml" = "anaconda_mcp/mcp_compose.toml", "src/anaconda_mcp/mcp_compose.toml.template" = "anaconda_mcp/mcp_compose.toml.template"}

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    "src/anaconda_mcp",
    "pyproject.toml",
    "README.md",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["anaconda_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
