[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "anaconda-mcp"
dynamic = ["version"]
description = "Anaconda MCP"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10,<3.14"
authors = [{ name = "Anaconda, Inc." }]

dependencies = [
    "mcp-compose>=0.1.12,<2.0.0",
    "fastmcp>=2.0.0,<4.0.0",
    "anaconda-auth>=0.13.0,<1.0.0",
    "anaconda-cli-base>=0.9.1,<1.0.0",
    "click>=8.1.0,<9.0.0",
    "platformdirs>=4.0.0,<5",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
anaconda-mcp = "anaconda_mcp.cli:main"

[project.entry-points."anaconda_cli.subcommand"]
mcp = "anaconda_mcp.app:app"

[tool.hatch.build]
exclude = ["tests/**", ".github/**", "Makefile"]
artifacts = [
    "src/anaconda_mcp/mcp_compose.toml",
    "src/anaconda_mcp/mcp_compose.toml.template"
]

[tool.hatch.build.targets.wheel]
packages = ["src/anaconda_mcp"]
force-include = {"src/anaconda_mcp/mcp_compose.toml" = "anaconda_mcp/mcp_compose.toml", "src/anaconda_mcp/mcp_compose.toml.template" = "anaconda_mcp/mcp_compose.toml.template", "LICENSE-conda-mcp-lite.txt" = "anaconda_mcp/LICENSE-conda-mcp-lite.txt"}

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

# Restrict `git describe` to valid PEP 440 versions.
# `git describe` picks up the latest published version.
# If an mcpb version is the latest version, this causes an error and crashes wheel-metadata builds.
[tool.hatch.version.raw-options.scm.git]
describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "v[0-9]*"]

[tool.hatch.build.targets.sdist]
include = [
    "src/anaconda_mcp",
    "pyproject.toml",
    "README.md",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["anaconda_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
